shrank font, fixed z-index

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,6 +29,8 @@ header {
 	text-align: center;
 	max-width: 800px;
 	min-width: 320px;
+	z-index:2;
+	position:relative;
 
 	h1, h2, p {
 		margin: 0;
@@ -43,7 +45,7 @@ header {
 	}
 
 	h1 {
-		font: 400 8em/0.9 $russo;
+		font: 400 6em/0.9 $russo;
 		border-bottom: 1px dashed $black;
 		padding-bottom: 0.25em;
 		text-shadow: 2px 4px 0 $white, 8px 10px 0 lighten($black, 80%);
